--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -26,6 +26,11 @@
     <a href="./maps/3857_map.png">
     <img src="./maps/3857_map.png" alt="EPSG3857" width='500px'>
     </a>
+    <h2>ESRI 53018</h2>
+    <h3>Some observations</h3>
+    <a href="./maps/53018_map.png">
+    <img src="./maps/53018_map.png" alt="ESRI53018" width='500px'>
+    </a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
     <p></p>
