--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -31,6 +31,12 @@
     <a href="./maps/53018_map.png">
     <img src="./maps/53018_map.png" alt="ESRI53018" width='500px'>
     </a>
+</a>
+<h2>ESRI 54034</h2>
+<h3>Some observations</h3>
+<a href="./maps/54034_map.png">
+<img src="./maps/54034_map.png" alt="ESRI53018" width='500px'>
+</a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
     <p></p>
