--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -35,7 +35,13 @@
 <h2>ESRI 54034</h2>
 <h3>Some observations</h3>
 <a href="./maps/54034_map.png">
-<img src="./maps/54034_map.png" alt="ESRI53018" width='500px'>
+<img src="./maps/54034_map.png" alt="ESRI54034" width='500px'>
+</a>
+</a>
+<h2>ESRI 54027</h2>
+<h3>Some observations</h3>
+<a href="./maps/54027_map.png">
+<img src="./maps/54027_map.png" alt="ESRI54027" width='500px'>
 </a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
