--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -21,10 +21,10 @@
     <a href=".//maps/54043.png">
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
-    <h2>EPSG 3857</h2>
+    <h2>WGS84 / Pseudo-Mercator Projection</h2>
     <h3>Some observations</h3>
-    <a href="./maps/3857_map.png">
-    <img src="./maps/3857_map.png" alt="EPSG3857" width='500px'>
+    <a href="./maps/Map_ESPG3857.png">
+    <img src="./maps/Map_ESPG3857.png" alt="EPSG3857" width='500px'>
     </a>
     <h2>ESRI 53018</h2>
     <h3>Some observations</h3>
