--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -26,10 +26,10 @@
     <a href="./maps/Map_ESPG3857.png">
     <img src="./maps/Map_ESPG3857.png" alt="EPSG3857" width='500px'>
     </a>
-    <h2>ESRI 53018</h2>
+    <h2>Sphere Winkel I</h2>
     <h3>Some observations</h3>
-    <a href="./maps/53018_map.png">
-    <img src="./maps/53018_map.png" alt="ESRI53018" width='500px'>
+    <a href="./maps/Map_ESRI53018.png">
+    <img src="./maps/Map_ESRI53018.png" alt="ESRI53018" width='500px'>
     </a>
 </a>
 <h2>ESRI 54034</h2>
