world cylindrical equal area

--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -32,10 +32,10 @@
     <img src="./maps/Map_ESRI53018.png" alt="ESRI53018" width='500px'>
     </a>
 </a>
-<h2>ESRI 54034</h2>
+<h2>World Cylindrical Equal Area</h2>
 <h3>Some observations</h3>
-<a href="./maps/54034_map.png">
-<img src="./maps/54034_map.png" alt="ESRI54034" width='500px'>
+<a href="./maps/Map_ESRI54034.png">
+<img src="./maps/Map_ESRI54034.png" alt="ESRI54034" width='500px'>
 </a>
 </a>
 <h2>ESRI 54027</h2>
