World Equidistant Conic

--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -38,10 +38,10 @@
 <img src="./maps/Map_ESRI54034.png" alt="ESRI54034" width='500px'>
 </a>
 </a>
-<h2>ESRI 54027</h2>
+<h2>World Equidistant Conic</h2>
 <h3>Some observations</h3>
-<a href="./maps/54027_map.png">
-<img src="./maps/54027_map.png" alt="ESRI54027" width='500px'>
+<a href="./maps/Map_ESRI54027.png">
+<img src="./maps/Map_ESRI54027.png" alt="ESRI54027" width='500px'>
 </a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
