--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -43,6 +43,12 @@
 <a href="./maps/Map_ESRI54027.png">
 <img src="./maps/Map_ESRI54027.png" alt="ESRI54027" width='500px'>
 </a>
+</a>
+<h2>North Pole Azimuthal Equidistant</h2>
+<h3>Some observations</h3>
+<a href="./maps/Map_ESRI102016.png">
+<img src="./maps/Map_ESRI102016.png" alt="ESRI102016" width='500px'>
+</a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
     <p></p>
