--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -55,6 +55,12 @@
 <a href="./maps/Map_ESRI54046.png">
 <img src="./maps/Map_ESRI54046.png" alt="ESRI54046" width='500px'>
 </a>
+</a>
+<h2>World Eckert III</h2>
+<h3>Some observations</h3>
+<a href="./maps/Map_ESRI54013.png">
+<img src="./maps/Map_ESRI54013.png" alt="ESRI54013" width='500px'>
+</a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
     <p></p>
