--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -8,8 +8,7 @@
 <body>
     <h1>In this project I learned how to display images in different projections</h1>
     
-    <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2>
-    <p>You can write a paragraph here</p>
+    <h2 style="color:red">To create these maps I installed and applied the Globe Builder QGIS plugin to set a world basemap and the Indicatrix mapper to demonstrate imperfections in these different displays in showcasing world shape and area. I then used the Coordinate Reference System to search for specific projections and apply them to my QGIS map. Then I exported the maps as PNG files and put them into the folder that I have in Visual Studio Code. Then I followed our Professor's demonstrated code to formulate the webpage displaying the maps I created.</p>
     
     <h2>WGS84 Projection</h2>
     <h3>Some observations</h3>
