--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -11,7 +11,7 @@
     <h2 style="color:red">To create these maps I installed and applied the Globe Builder QGIS plugin to set a world basemap and the Indicatrix mapper to demonstrate imperfections in these different displays in showcasing world shape and area. I then used the Coordinate Reference System to search for specific projections and apply them to my QGIS map.</p>
     
     <h2>WGS84 Projection</h2>
-    <h3>Some observations</h3>
+    <h3>This map focuses on preserving correct area which is shown by the equal distance between each and every circle. In doing this the map sacrifices shape which you can see in the outermost circles being more ovals than circles.</h3>
     <a href=".//maps/4326.png">
     <img src=".//maps/4326.png" alt="WGS84" width='500px'>
     </a>
