--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -16,7 +16,7 @@
     <img src=".//maps/4326.png" alt="WGS84" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
-    <h3>Some observations</h3>
+    <h3>This map is azimuthal which means that direction from the center point is preserved. The shape and area are both not true in this projection as shown by the distances between the circles changing and the circles themselves stretching.</h3>
     <a href=".//maps/54043.png">
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
