--- a/Worldprojections/index.html
+++ b/Worldprojections/index.html
@@ -21,42 +21,42 @@
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
     <h2>WGS84 / Pseudo-Mercator Projection</h2>
-    <h3>Some observations</h3>
+    <h3>The Pseudo-Mercator Projection focuses entirely on preserving shape as shown by the circles holding their circular shape throughout the projection. In doing this the map sacrifices other factors most significantly area as most prominantly demonstrated by Greenland being almost the same size as Africa which is not proportionally accurate.</h3>
     <a href="./maps/Map_ESPG3857.png">
     <img src="./maps/Map_ESPG3857.png" alt="EPSG3857" width='500px'>
     </a>
     <h2>Sphere Winkel I</h2>
-    <h3>Some observations</h3>
+    <h3>Sphere Winkel I is most similar thusfar to the azimuthal map that preserves direction above all esle. Except this map gives more credit to area and distance than the Aitoff projection did.</h3>
     <a href="./maps/Map_ESRI53018.png">
     <img src="./maps/Map_ESRI53018.png" alt="ESRI53018" width='500px'>
     </a>
 </a>
 <h2>World Cylindrical Equal Area</h2>
-<h3>Some observations</h3>
+<h3>The World Cylindrical Equal Area map focuses above all else on preserving the area of the world which leaves the map with large distortions in shape as shown by the lack of visibility of Antarctica and Greenland.</h3>
 <a href="./maps/Map_ESRI54034.png">
 <img src="./maps/Map_ESRI54034.png" alt="ESRI54034" width='500px'>
 </a>
 </a>
 <h2>World Equidistant Conic</h2>
-<h3>Some observations</h3>
+<h3>This conic projection gives a good sense of distance while largely sacrificing area as demonstrated in the vast inequality in sizing of the squares from the inside of the projection outwards.</h3>
 <a href="./maps/Map_ESRI54027.png">
 <img src="./maps/Map_ESRI54027.png" alt="ESRI54027" width='500px'>
 </a>
 </a>
 <h2>North Pole Azimuthal Equidistant</h2>
-<h3>Some observations</h3>
+<h3>This projection works similarly to that of the World Equidistant Conic except this map also prioritizes maintaining direction from center.</h3>
 <a href="./maps/Map_ESRI102016.png">
 <img src="./maps/Map_ESRI102016.png" alt="ESRI102016" width='500px'>
 </a>
 </a>
 <h2>World Craster Parabolic</h2>
-<h3>Some observations</h3>
+<h3>The craster projection maintains area throughout the projection. This map sacrifices shape as seen towards the edges of the map along with distance and directions.</h3>
 <a href="./maps/Map_ESRI54046.png">
 <img src="./maps/Map_ESRI54046.png" alt="ESRI54046" width='500px'>
 </a>
 </a>
 <h2>World Eckert III</h2>
-<h3>Some observations</h3>
+<h3>This projection seems to lose sense of all facets of these projections the map progresses outwards. Inwards the shape, distance, and area are well kept </h3>
 <a href="./maps/Map_ESRI54013.png">
 <img src="./maps/Map_ESRI54013.png" alt="ESRI54013" width='500px'>
 </a>
